--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "@microsoft/signalr": "^8.0.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
