--- a/Client/package.json
+++ b/Client/package.json
@@ -14,7 +14,12 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@microsoft/signalr": "^8.0.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
